# Lastest_project_files

./: .gitignore  Otp_page.html  app.py  front_page.html  index.html  middle_page.html  pyproject.toml  style.css
